test/parsing/errors/nameLength/longName.precomp
#!/usr/bin/env bash

VAL="$( cd "$( dirname "${BASH_SOURCE[0]}" )" &> /dev/null && pwd )"
NAME_MAX=`getconf NAME_MAX $VAL`
REDUCTIONMAXLENGTH=16
LIMIT=$((NAME_MAX - REDUCTIONMAXLENGTH))
OUTOFBOUND=$((LIMIT + 1))

repeatChar() {
    local input="$1"
    local count="$2"
    printf -v myString "%*s" "$count"
    printf '%s\n' "${myString// /$input}"
}

FILENAME=$(repeatChar a $OUTOFBOUND)
printf 'module LongName {\n\tproc printSomething() {\n\t\twriteln(%s); \n\t}\n}' '"Test"' > $VAL/$FILENAME.chpl
touch $VAL/$FILENAME.notest
printf 'require %s;' "'$FILENAME.chpl'" > $VAL/longNameHelper.chpl
touch $VAL/longNameHelper.notest
printf "error: %s, filename is longer than maximum allowed length of %d\n\n" $FILENAME.chpl $LIMIT > $VAL/longName.good
